Added page title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div id="container">
         
 			<div id="content">
-           <h1>My generator</h1>
+           <h1>Tediously hip indie publishing house generator</h1>
 				<div id="output">
 					
 				</div>
