--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 					<p>Based on <a href="https://twitter.com/emilyhughes/status/975896813139124224">a tweet thread</a>.</p>
 					<p>Uses <a href="http://www.galaxykate.com/">Kate's</a> magnificent <a href="https://tracery.io/">Tracery</a>
 						 - specifically, the web template from <a href="http://cmuems.com/2015b/tracery-twitterbots/">here</a>.</p>
+					<p>Want to contribute? <a href="https://github.com/yozlet/indiepub-generator">Here's the repo</a> - pull requests welcome.</p>
 				</div>
 				
 			</div>
