--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 		<div id="container">
         
 			<div id="content">
-           <h1>Tediously hip indie publishing house generator</h1>
+					 <h1>Tediously hip indie publishing house generator</h1>
+				<div>
+					Your painfully-trendy new imprint is called:
+				</div>
+
 				<div id="output">
 					
 				</div>
