Link to grammar in repo

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 					<p>Based on <a href="https://twitter.com/emilyhughes/status/975896813139124224">a tweet thread</a>.</p>
 					<p>Uses <a href="http://www.galaxykate.com/">Kate's</a> magnificent <a href="https://tracery.io/">Tracery</a>
 						 - specifically, the web template from <a href="http://cmuems.com/2015b/tracery-twitterbots/">here</a>.</p>
-					<p>Want to contribute? <a href="https://github.com/yozlet/indiepub-generator">Here's the repo</a> - pull requests welcome.</p>
+					<p>Want to contribute? <a href="https://github.com/yozlet/indiepub-generator">Here's the repo</a>, and the 
+						<a href="https://github.com/yozlet/indiepub-generator/blob/master/grammar.js">current state of the grammar</a>; additions welcome.</p>
 				</div>
 				
 			</div>
